There are problems when compiling to a specific architecture (i.e. x86 instead of any cpu) because VS adds another directory level (bin/x86/Debug). Thus I improved the directory handling in the install scripts and build-events. Also changed the default architecture for the solution and all projects to x86. Hopefully this doesn't cause compilation problems for anyone. In this case just reverse merge the changeset.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@564 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.DB.Interfaces/HeuristicLab.CEDMA.DB.Interfaces.csproj
+++ b/sources/HeuristicLab.CEDMA.DB.Interfaces/HeuristicLab.CEDMA.DB.Interfaces.csproj
@@ -102,6 +102,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c ..\..\..\PreBuildEvent.cmd</PreBuildEvent>
+    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
   </PropertyGroup>
 </Project>
