--- a/sources/HeuristicLab.CEDMA.Charting/HeuristicLab.CEDMA.Charting.csproj
+++ b/sources/HeuristicLab.CEDMA.Charting/HeuristicLab.CEDMA.Charting.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BubbleChartControl.Designer.cs">
       <DependentUpon>BubbleChartControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Record.cs" />
     <Compile Include="HeuristicLabCedmaChartingPlugin.cs" />
     <Compile Include="Histogram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
