implemented basic histogram (without 'brushing'). #271 (Functionality to show frequency distribution of any variable (histograms))
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@571 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.CEDMA.Charting/HeuristicLab.CEDMA.Charting.csproj
+++ b/sources/HeuristicLab.CEDMA.Charting/HeuristicLab.CEDMA.Charting.csproj
@@ -72,6 +72,13 @@
     <Compile Include="BubbleChartControl.Designer.cs">
       <DependentUpon>BubbleChartControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Histogram.cs" />
+    <Compile Include="HistogramControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HistogramControl.Designer.cs">
+      <DependentUpon>HistogramControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -80,7 +87,6 @@
     </Compile>
     <Compile Include="Record.cs" />
     <Compile Include="HeuristicLabCedmaChartingPlugin.cs" />
-    <Compile Include="Histogram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultList.cs" />
     <Compile Include="ResultListView.cs">
@@ -135,6 +141,10 @@
   <ItemGroup>
     <EmbeddedResource Include="BubbleChartControl.resx">
       <DependentUpon>BubbleChartControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HistogramControl.resx">
+      <DependentUpon>HistogramControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ModelView.resx">
