--- a/sources/HeuristicLab.BitVector/HeuristicLab.BitVector.csproj
+++ b/sources/HeuristicLab.BitVector/HeuristicLab.BitVector.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6D9564BB-956D-4808-8F92-AA7F776F90A5}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -95,6 +95,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
+    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
   </PropertyGroup>
 </Project>
