--- a/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
+++ b/sources/HeuristicLab.CEDMA.Operators/HeuristicLab.CEDMA.Operators.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6BC692D4-8843-4945-ACE4-5B41ED55476A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -121,6 +121,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
+    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
   </PropertyGroup>
 </Project>
