--- a/sources/HeuristicLab.Operators.Stopwatch/HeuristicLab.Operators.Stopwatch.csproj
+++ b/sources/HeuristicLab.Operators.Stopwatch/HeuristicLab.Operators.Stopwatch.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{39DEF061-8261-43DB-8B3B-C7555251FF77}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -96,6 +96,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
+    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
   </PropertyGroup>
 </Project>
