--- a/sources/HeuristicLab.OptimizationFrontend/HeuristicLab.OptimizationFrontend.csproj
+++ b/sources/HeuristicLab.OptimizationFrontend/HeuristicLab.OptimizationFrontend.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C2FB432A-07CA-45B5-BAFE-FEC172D1107B}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -156,6 +156,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
+    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
   </PropertyGroup>
 </Project>
