--- a/sources/HeuristicLab.TestFunctions/HeuristicLab.TestFunctions.csproj
+++ b/sources/HeuristicLab.TestFunctions/HeuristicLab.TestFunctions.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{9A781B2F-A58D-4270-A28A-3B14BBC11F4A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -106,6 +106,7 @@
   <ItemGroup>
     <EmbeddedResource Include="TestFunctionInjectorView.resx">
       <DependentUpon>TestFunctionInjectorView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -117,6 +118,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
+    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
   </PropertyGroup>
 </Project>
