--- a/sources/HeuristicLab/HeuristicLab.csproj
+++ b/sources/HeuristicLab/HeuristicLab.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{623FB817-8371-4A9A-A491-4DECC87B2BBB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -139,8 +139,8 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>cmd /c $(ProjectDir)CopyAssemblies.cmd $(SolutionDir) $(Outdir)
-cmd /c $(ProjectDir)UpdateLocalInstallation.cmd $(Outdir)</PostBuildEvent>
-    <PreBuildEvent>cmd /c $(SolutionDir)PreBuildEvent.cmd $(ProjectDir)</PreBuildEvent>
+    <PostBuildEvent>cmd /c ""$(ProjectDir)CopyAssemblies.cmd" "$(SolutionDir)." "$(Outdir).""
+cmd /c ""$(ProjectDir)UpdateLocalInstallation.cmd" "$(Outdir).""</PostBuildEvent>
+    <PreBuildEvent>cmd /c ""$(SolutionDir)PreBuildEvent.cmd" "$(ProjectDir).""</PreBuildEvent>
   </PropertyGroup>
 </Project>
