--- a/sources/HeuristicLab.CEDMA.DB/HeuristicLab.CEDMA.DB.csproj
+++ b/sources/HeuristicLab.CEDMA.DB/HeuristicLab.CEDMA.DB.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeuristicLab.CEDMA.DB</RootNamespace>
-    <AssemblyName>HeuristicLab.CEDMA.DB</AssemblyName>
+    <AssemblyName>HeuristicLab.CEDMA.DB-3.2</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
