--- a/sources/HeuristicLab.CEDMA.Server/HeuristicLab.CEDMA.Server.csproj
+++ b/sources/HeuristicLab.CEDMA.Server/HeuristicLab.CEDMA.Server.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeuristicLab.CEDMA.Server</RootNamespace>
-    <AssemblyName>HeuristicLab.CEDMA.Server</AssemblyName>
+    <AssemblyName>HeuristicLab.CEDMA.Server-3.2</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
