--- a/sources/HeuristicLab.DistributedEngine/HeuristicLab.DistributedEngine.csproj
+++ b/sources/HeuristicLab.DistributedEngine/HeuristicLab.DistributedEngine.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeuristicLab.DistributedEngine</RootNamespace>
-    <AssemblyName>HeuristicLab.DistributedEngine</AssemblyName>
+    <AssemblyName>HeuristicLab.DistributedEngine-3.2</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\HeuristicLab.DistributedEngine.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.DistributedEngine-3.2.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,7 +42,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\HeuristicLab.DistributedEngine.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.DistributedEngine-3.2.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
