--- a/sources/HeuristicLab.Routing.TSP/HeuristicLab.Routing.TSP.csproj
+++ b/sources/HeuristicLab.Routing.TSP/HeuristicLab.Routing.TSP.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeuristicLab.Routing.TSP</RootNamespace>
-    <AssemblyName>HeuristicLab.Routing.TSP</AssemblyName>
+    <AssemblyName>HeuristicLab.Routing.TSP-3.2</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
@@ -35,7 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\HeuristicLab.Routing.TSP.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.Routing.TSP-3.2.XML</DocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -49,7 +49,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Release\HeuristicLab.Routing.TSP.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.Routing.TSP-3.2.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
