Fixed CopyAssemblies.cmd and dependencies (#293)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@622 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization.Test/HeuristicLab.Visualization.Test.csproj
+++ b/sources/HeuristicLab.Visualization.Test/HeuristicLab.Visualization.Test.csproj
@@ -62,6 +62,10 @@
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HeuristicLab.Visualization\HeuristicLab.Visualization.csproj">
+      <Project>{E392A1E2-DC95-4E33-B82E-8ED690EDA1AB}</Project>
+      <Name>HeuristicLab.Visualization</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
