--- a/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
+++ b/sources/HeuristicLab.Visualization/HeuristicLab.Visualization.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E392A1E2-DC95-4E33-B82E-8ED690EDA1AB}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -57,9 +57,14 @@
     <Compile Include="CanvasUI.Designer.cs">
       <DependentUpon>CanvasUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChartDataModelBase.cs" />
+    <Compile Include="ChartDataRowsModel.cs" />
+    <Compile Include="ChartDataRowsModelDummy.cs" />
     <Compile Include="CompositeShape.cs" />
     <Compile Include="HeuristicLabVisualizationPlugin.cs" />
     <Compile Include="ICanvas.cs" />
+    <Compile Include="IChartDataModel.cs" />
+    <Compile Include="IChartDataRowsModel.cs" />
     <Compile Include="IShape.cs" />
     <Compile Include="Offset.cs" />
     <Compile Include="PointD.cs" />
