fixed #328 by restructuring evaluation operators to remove state in evaluation operators.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@702 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification.Classification/HeuristicLab.GP.StructureIdentification.Classification.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification.Classification/HeuristicLab.GP.StructureIdentification.Classification.csproj
@@ -66,12 +66,12 @@
     <Compile Include="AccuracyEvaluator.cs" />
     <Compile Include="ClassificationMeanSquaredErrorEvaluator.cs" />
     <Compile Include="ConfusionMatrixEvaluator.cs" />
+    <Compile Include="GPClassificationEvaluatorBase.cs" />
     <Compile Include="CrossValidation.cs" />
     <Compile Include="FunctionLibraryInjector.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HeuristicLabGPClassificationPlugin.cs" />
-    <Compile Include="MCCEvaluator.cs" />
     <Compile Include="MulticlassModeller.cs" />
     <Compile Include="MulticlassOneVsOneAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
